# FreeRTOS-Kernel

./: meson.build
include/: FreeRTOSConfig.h
